# de1

./: Cargo.toml  README.md
src/: fake.rs  lib.rs  serial.rs
src/test_files/: brew-log.txt  choose-profile-log.txt  connect-log.txt  startup-log.txt
