[package]
name = "de1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = { version = "0.13.3", default-features = false }
fixed = "1.26.0"
heapless = "0.8.0"
nom = { version = "7.1.3", default-features = false }

[[bin]]
name = "parse_serial_log"
path = "src/bin/parse_serial_log.rs"
