[package]
name = "de1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = { version = "0.13.3", default-features = false }
embassy-futures = "0.1.1"
embassy-sync = "0.5.0"
embassy-time = "0.3.0"
embedded-io-async = "0.6.1"
critical-section = { version = "1.1", default_features = false }
fixed = "1.26.0"
heapless = "0.8.0"
nom = { version = "7.1.3", default-features = false }
embassy-executor = { version = "0.5.0", default-features = false }
esp-println = { version = "0.9.1", default-features = false }

[dev-dependencies]
embedded-io-async = { version = "0.6.1", features = ["std"] }
futures-test = { version = "0.3.30" }

[features]
default = []
std = [
	"critical-section/std",
	"embassy-executor/arch-std",
	"embassy-executor/executor-thread",
	"embassy-executor/integrated-timers",
	"embassy-time/std",
]

[[bin]]
name = "parse_serial_log"
path = "src/bin/parse_serial_log.rs"
required-features = ["std"]
